--- a/1 Etiquetas HTML/index.html
+++ b/1 Etiquetas HTML/index.html
@@ -1,13 +1,5 @@
-<h1>Películas</h1>
-<h2>Piratas del Caribe</h2>
-<h3>Jack Sparrow (Depp) y al herrero Will Turner (Bloom), 
-    mientras intentan rescatar a Elizabeth Swann (Knightley), 
-    secuestrada . El trío se encuentra con el capitán Hector Barbossa (Rush) y la tripulación del Perla Negra, quienes están afectados por una maldición sobrenatural.</h3>
-<h2>Pulp Fiction</h2>
-<h3>Jules Winnfield (Samuel L. Jackson, Jackie Brown) y Vincent Vega (John Travolta, Grease) son dos asesinos a sueldo que trabajan a las órdenes del temido gángster Marsellus Wallace (Ving Rhames, Amanecer de los muertos), quien les encarga la importante misión de recuperar su misterioso maletín, 
-    que ha sido robado.</h3>
-<h2>Bastardos sin gloria</h2>
-<h3>Bastardos Sin Gloria comienza en una Francia ocupada por los alemanes, 
-    donde Shosanna Dreyfus (Mélanie Laurent) atestigua la ejecución de su familia a manos del Coronel Nazi Hans Landa (Christoph Waltz). 
-    Shosanna logra escapar y huye a París, donde ella se crea una nueva identidad como la dueña y operadora de un cine.
-</h3>
+Book
+Chapter 1
+Section 1 Section 2
+Chapter 2
+Section 1 Diagram 1 Chapter 3 Section 1 Section 2
