--- a/1 Etiquetas HTML/index.html
+++ b/1 Etiquetas HTML/index.html
@@ -1,5 +1,41 @@
-Book
-Chapter 1
-Section 1 Section 2
-Chapter 2
-Section 1 Diagram 1 Chapter 3 Section 1 Section 2
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El Hobbit</title>
+</head>
+<body>
+    <h1>El Hobbit</h1>
+
+    <h2>Capítulo 1: Una reunión inesperada</h2>
+    <section>
+        <h3>Sección 1</h3>
+        <p>Bilbo Bolsón, un hobbit pacífico, recibe la visita de Gandalf el Mago y un grupo de trece enanos liderados por Thorin Escudo de Roble, quienes buscan un miembro para una aventura peligrosa.</p>
+    </section>
+    <section>
+        <h3>Sección 2</h3>
+        <p>A pesar de su naturaleza reservada, Bilbo es reclutado para la expedición. La misión consiste en ayudar a los enanos a recuperar su hogar y tesoro, custodiado por el dragón Smaug.</p>
+    </section>
+
+    <h2>Capítulo 2: Asado de cordero</h2>
+    <section>
+        <h3>Sección 1</h3>
+        <p>El grupo parte hacia la Montaña Solitaria. Pronto se encuentran con trolls que intentan capturarlos para comérselos.</p>
+    </section>
+    <section>
+        <h3>Sección 2</h3>
+        <p>Con astucia, Gandalf logra rescatar a sus compañeros al engañar a los trolls para que discutan hasta el amanecer, momento en que se convierten en piedra por la luz del sol.</p>
+    </section>
+
+    <h2>Capítulo 3: Una breve estadía</h2>
+    <section>
+        <h3>Sección 1</h3>
+        <p>El grupo llega a Rivendel, donde son recibidos por los elfos y el sabio Elrond, quien los guía en su travesía hacia las Montañas Nubladas.</p>
+    </section>
+    <section>
+        <h3>Sección 2</h3>
+        <p>Elrond examina el mapa de Thorin y descubre runas secretas que revelan la entrada oculta a la montaña, que solo se abrirá en un momento específico.</p>
+    </section>
+</body>
+</html>
