--- a/1 Etiquetas HTML/index.html
+++ b/1 Etiquetas HTML/index.html
@@ -15,7 +15,7 @@
     </section>
     <section>
         <h3>Sección 2</h3>
-        <p>A pesar de su naturaleza reservada, Bilbo es reclutado para la expedición. La misión consiste en ayudar a los enanos a recuperar su hogar y tesoro, custodiado por el dragón Smaug.</p>
+        <p>Aunque al principio rechaza despues Bilbo es reclutado para la expedición. La misión consiste en ayudar a los enanos a recuperar su hogar y tesoro, custodiado por el dragón Smaug.</p>
     </section>
 
     <h2>Capítulo 2: Asado de cordero</h2>
@@ -25,7 +25,7 @@
     </section>
     <section>
         <h3>Sección 2</h3>
-        <p>Con astucia, Gandalf logra rescatar a sus compañeros al engañar a los trolls para que discutan hasta el amanecer, momento en que se convierten en piedra por la luz del sol.</p>
+        <p>Gandalf logra rescatar a sus compañeros al engañar a los trolls para que discutan hasta el amanecer, momento en que se convierten en piedra por la luz del sol.</p>
     </section>
 
     <h2>Capítulo 3: Una breve estadía</h2>
