--- a/1 Práctica Etiquetas HTML Componentes Básico/index.html
+++ b/1 Práctica Etiquetas HTML Componentes Básico/index.html
@@ -1,13 +1,41 @@
-<h1>Book</h1>
-<hr/>
-<hr/>
-<h2>Chapter 1</h2>
-<h3>Section 1</h3>
-<h3>Section 2</h3>
-<h2>Chapter 2</h2>
-<h3>Section 1</h3>
-<h4>Diagram 1</h4>
-<h2>Chapter 3</h2>
-<h3>Section 1</h3>
-<h3>Section 2</h3>
-<h3>Section 3</h3>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>El Señor de los Anillos: La Comunidad del Anillo</title>
+</head>
+<body>
+    <h1>El Señor de los Anillos: La Comunidad del Anillo</h1>
+    <hr/>
+    <hr/>
+
+    <h2>Capítulo 1: Una larga espera</h2>
+    <h3>Sección 1</h3>
+    <p>Bilbo Bolsón celebra su 111º cumpleaños en La Comarca con una gran fiesta, donde sorprende a todos con su misteriosa desaparición usando el Anillo Único.</p>
+    
+    <h3>Sección 2</h3>
+    <p>Después de la fiesta, Bilbo se prepara para dejar La Comarca y le confía el Anillo a su sobrino Frodo, quien ahora se convierte en el guardián del Anillo.</p>
+
+    <h2>Capítulo 2: La sombra del pasado</h2>
+    <h3>Sección 1</h3>
+    <p>Gandalf visita a Frodo y le revela la verdadera naturaleza del Anillo Único, explicándole el peligro que representa para toda la Tierra Media.</p>
+
+    <h4>Ilustración 1</h4>
+    <p>Una ilustración describe los Anillos de Poder y la creación del Anillo Único por Sauron en los fuegos del Monte del Destino.</p>
+
+    <h3>Sección 2</h3>
+    <p>Frodo decide dejar La Comarca para mantener el Anillo fuera del alcance de los sirvientes de Sauron, emprendiendo un peligroso viaje.</p>
+
+    <h2>Capítulo 3: Tres es compañía</h2>
+    <h3>Sección 1</h3>
+    <p>Frodo, junto a sus amigos Sam y Pippin, parten en secreto de La Comarca, intentando evitar ser detectados por los misteriosos Jinetes Negros.</p>
+
+    <h3>Sección 2</h3>
+    <p>Los hobbits cruzan el bosque y encuentran al elfo Gildor, quien les advierte sobre los peligros que enfrentan y la importancia de su misión.</p>
+
+    <h3>Sección 3</h3>
+    <p>Animados por la ayuda de Gildor, los hobbits continúan su camino, decididos a llegar a Bree y encontrar a Gandalf.</p>
+</body>
+</html>
+
