--- a/2 Etiquetas HTML Listas/index.html
+++ b/2 Etiquetas HTML Listas/index.html
@@ -1,29 +1,61 @@
-Angela's Cinnamon Roll Recipe
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Receta de Encebollado Ecuatoriano</title>
+</head>
+<body>
+    <h1>Receta de Encebollado Ecuatoriano</h1>
 
-Ingredients
+    <h2>Ingredientes</h2>
 
-For the dough:
-¾ cup warm milk
-2 ¼ teaspoons yeast 
-¼ cup granulated sugar
-1 egg plus 1 egg yolk
-¼ cup butter
-3 cups bread flour
+    <h3>Para el caldo</h3>
+    <ul>
+        <li>1 kg de albacora fresca</li>
+        <li>2 litros de agua</li>
+        <li>1 cebolla colorada grande</li>
+        <li>1 tomate grande</li>
+        <li>2 ramas de cilantro</li>
+        <li>2 dientes de ajo</li>
+        <li>Sal al gusto</li>
+    </ul>
 
-For the filling:
-2/3 cup dark brown sugar 
-1 ½ tablespoons ground cinnamon
-¼ cup butter
+    <h3>Para el acompañamiento</h3>
+    <ul>
+        <li>1 taza de yuca, pelada y cortada en trozos</li>
+        <li>1 cebolla colorada, cortada en rodajas finas</li>
+        <li>Jugo de 2 limones</li>
+        <li>Pimienta y comino al gusto</li>
+        <li>Aceite de achiote o aceite vegetal</li>
+    </ul>
 
-Instructions
+    <h2>Instrucciones</h2>
 
-Mix the milk with the yeast, sugar, eggs.
-Melt the butter and add to the mixture.
-Add in the flour and mix until combined into a dough.
-Knead the dough for 10 minuites. 
-Transfer the dough into a large bowl and cover with plastic wrap. Leave it somewhere to rise for 2 hours.
-After the dough has doubled in size, roll it out into a large rectangle. 
-Melt the butter for the filling and mix in the sugar and cinnamon.
-Spread the filling onto the dough then roll the dough into a swiss roll. 
-Cut the roll into 3cm sections and place flat into a baking tray.
-Pre-heat the oven to 350F or 180C, then bake the rolls for 20-25min until lightly brown. 
+    <h4>Preparación del caldo</h4>
+    <ol>
+        <li>Coloca la albacora en una olla grande con agua y añade la cebolla, el tomate, el ajo y el cilantro.</li>
+        <li>Sazona con sal al gusto y cocina a fuego medio hasta que la albacora esté bien cocida, aproximadamente 20-25 minutos.</li>
+        <li>Retira la albacora y desmenúzala en trozos medianos. Reserva el caldo.</li>
+    </ol>
+
+    <h4>Preparación de la yuca</h4>
+    <ol>
+        <li>En otra olla, cocina la yuca en agua con sal hasta que esté suave. Luego, córtala en trozos pequeños.</li>
+    </ol>
+
+    <h4>Preparación de la cebolla encurtida</h4>
+    <ol>
+        <li>Coloca las rodajas de cebolla en un recipiente, añade el jugo de limón, sal, pimienta y comino al gusto. Deja reposar unos minutos.</li>
+    </ol>
+
+    <h4>Ensamblaje del encebollado</h4>
+    <ol>
+        <li>En el caldo de albacora, agrega los trozos de yuca y la albacora desmenuzada.</li>
+        <li>Calienta el caldo y ajusta de sal si es necesario.</li>
+        <li>Sirve en tazones individuales y añade por encima la cebolla encurtida y un poco de aceite de achiote para dar color.</li>
+        <li>Acompaña el encebollado con chifles, no con pan ''wtf''.</li>
+    </ol>
+
+</body>
+</html>
