--- a/2 Práctica Etiquetas HTML Listas/index.html
+++ b/2 Práctica Etiquetas HTML Listas/index.html
@@ -54,7 +54,8 @@
     <ol>
         <li>En el caldo de albacora, agrega los trozos de yuca y la albacora desmenuzada.</li>
         <li>Calienta el caldo y ajusta de sal si es necesario.</li>
-        <li>Sirve en tazones individuales y añade por encima la cebolla encurtida y un poco de aceite de achiote para dar color.</li>
+        <li>Sirve en tazones individuales y añade por encima la cebolla encurtida //
+        y un poco de aceite de achiote para dar color.</li>
         <li>Acompaña el encebollado con chifles.</li>
     </ol>
 
